<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/warehouse_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/lblWareHouse"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/WareHouse"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtwarehouse"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text=""
            android:hint="@string/WareHouse"
            android:textAlignment="center"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warehouse_layout"
        android:layout_gravity="start"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/lblmail"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/eMail"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text=""
            android:hint="@string/eMail"
            android:textAlignment="center"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/count_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail_layout"
        android:layout_gravity="start"
        android:paddingTop="20dp">

    <TextView
        android:id="@+id/lblcount"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/Count"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtcount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        android:hint="@string/Count"
        android:textAlignment="center"
        android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/count_layout"
        android:layout_gravity="start"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/lbltype"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/Type"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spnsearchType"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </LinearLayout>
</RelativeLayout>